# dpdk

./: meson.build
app/test/: test_acl.c  test_cmdline_ipaddr.c  test_hash_functions.c  test_xmmt_ops.h
app/test-acl/: main.c
app/test-pmd/: config.c
buildtools/: pmdinfogen.py
config/: meson.build
config/s390x/: meson.build
drivers/common/mlx5/: mlx5_common.h
drivers/net/i40e/: i40e_rxtx_vec_s390x.c  meson.build
drivers/net/ixgbe/: ixgbe_rxtx.c
drivers/net/memif/: rte_eth_memif.h
drivers/net/mlx5/: mlx5_rx.c
drivers/net/octeontx/base/: octeontx_pki_var.h
examples/l3fwd/: l3fwd_em.c  l3fwd_s390x.h
examples/l3fwd-acl/: main.c
lib/acl/: acl_bld.c  meson.build  rte_acl.c  rte_acl.h
lib/eal/s390x/: meson.build  rte_cpuflags.c
lib/eal/s390x/include/: meson.build  rte_atomic.h  rte_io.h
lib/lpm/: meson.build  rte_lpm.h
